# coral-folly

./: .gitignore  CMakeLists.txt  CMakeOptions.cmake  CMakeOptions.txt  Doxyfile  README.md  requirements.txt
coral/: ApplyTuple.h  AtomicLinkedList.h  AtomicStruct.h  Baton.h  Benchmark.cpp  Benchmark.h  Binascii-inl.h  Binascii.cpp  Binascii.h  Bits.cpp  Bits.h  CMakeLists.txt  CPortability.h  Conv-ext.h  Conv.cpp  Conv.h  CpuId.h  Demangle.cpp  Demangle.h  DynamicConverter.h  Enum.h  EvictingCacheMap.h  Exception.h  ExceptionWrapper.h  ExecutionObserver.h  Executor.h  FBString.h  FBVector.h  File.cpp  File.h  FileUtil.cpp  FileUtil.h  FixedStream.h  Foreach.h  Format-inl.h  Format.cpp  Format.h  FormatArg.h  FormatTraits.h  Hash.h  (+72 more)
coral/apple/: CFTypeWrapper.h
coral/detail/: BitIteratorDetail.h  BitsDetail.h  CacheLocality.cpp  CacheLocality.h  Clock.cpp  Clock.h  ExceptionWrapper.h  FileUtilDetail.h  FunctionalExcept.cpp  FunctionalExcept.h  Futex.cpp  Futex.h  IPAddress.h  Malloc.h  MallocImpl.cpp  MemoryIdler.cpp  MemoryIdler.h  Sleeper.h  SpinLockImpl.h  ThreadLocalDetail.h  TurnSequencer.h  UncaughtExceptionCounter.h
coral/fibers/: AddTasks-inl.h  AddTasks.h  Baton-inl.h  Baton.cpp  Baton.h  BoostContextCompatibility.h  CMakeLists.txt  EventBaseLoopController-inl.h  EventBaseLoopController.h  Fiber-inl.h  Fiber.cpp  Fiber.h  FiberManager-inl.h  FiberManager.cpp  FiberManager.h  FiberManagerMap.cpp  FiberManagerMap.h  ForEach-inl.h  ForEach.h  GenericBaton.h  GuardPageAllocator.cpp  GuardPageAllocator.h  LoopController.h  Promise-inl.h  Promise.h  SimpleLoopController.h  TimedMutex-inl.h  TimedMutex.h  TimeoutController.cpp  TimeoutController.h  WhenN-inl.h  WhenN.h  traits.h
coral/fibers/test/: FibersTest.cpp  FibersTestApp.cpp  main.cpp
coral/futures/: Barrier.cpp  Barrier.h  CMakeLists.txt  DrivableExecutor.h  Future-inl.h  Future-pre.h  Future.cpp  Future.h  FutureException.h  InlineExecutor.h  ManualExecutor.cpp  ManualExecutor.h  OpaqueCallbackShunt.h  Promise-inl.h  Promise.h  QueuedImmediateExecutor.cpp  QueuedImmediateExecutor.h  README.md  ScheduledExecutor.h  SharedPromise-inl.h  SharedPromise.h  ThreadedExecutor.cpp  ThreadedExecutor.h  Timekeeper.h  Try-inl.h  Try.h  Unit.h  helpers.h
coral/futures/detail/: Core.h  FSM.h  ThreadWheelTimekeeper.cpp  ThreadWheelTimekeeper.h  Types.h
coral/futures/exercises/: 01-Values.cpp  Koan.h
coral/futures/test/: BarrierTest.cpp  Benchmark.cpp  CMakeLists.txt  CollectTest.cpp  ContextTest.cpp  CoreTest.cpp  EnsureTest.cpp  ExecutorTest.cpp  FSMTest.cpp  FilterTest.cpp  FutureTest.cpp  HeaderCompileTest.cpp  InterruptTest.cpp  MapTest.cpp  PollTest.cpp  PromiseTest.cpp  ReduceTest.cpp  RetryingTest.cpp  SharedPromiseTest.cpp  ThenCompileTest.cpp  ThenCompileTest.h  ThenTest.cpp  ThreadedExecutorTest.cpp  TimekeeperTest.cpp  TimesTest.cpp  TryTest.cpp  UnitTest.cpp  UnwrapTest.cpp  ViaTest.cpp  WaitTest.cpp  WhenTest.cpp  WhileDoTest.cpp  WillEqualTest.cpp  WindowTest.cpp  then_compile_test.rb
coral/io/: CMakeLists.txt  Cursor-defs.h  Cursor.h  FsUtil-inl.h  FsUtil.cpp  FsUtil.h  IOBuf.cpp  IOBuf.h  IOBufQueue.cpp  IOBufQueue.h  ShutdownSocketSet.cpp  ShutdownSocketSet.h  TypedIOBuf.h
coral/io/async/: AsyncSSLSocket.cpp  AsyncSSLSocket.h  AsyncServerSocket.cpp  AsyncServerSocket.h  AsyncSignalHandler.cpp  AsyncSignalHandler.h  AsyncSocket.cpp  AsyncSocket.h  AsyncSocketBase.h  AsyncSocketException.h  AsyncTimeout.cpp  AsyncTimeout.h  AsyncTransport.h  AsyncUDPServerSocket.h  AsyncUDPSocket.cpp  AsyncUDPSocket.h  CMakeLists.txt  DelayedDestruction.h  DelayedDestructionBase.h  EventBase.cpp  EventBase.h  EventBaseManager.cpp  EventBaseManager.h  EventFDWrapper.h  EventHandler.cpp  EventHandler.h  EventUtil.h  HHWheelTimer.cpp  HHWheelTimer.h  NotificationQueue.h  Request.h  SSLContext.cpp  SSLContext.h  ScopedEventBaseThread.cpp  ScopedEventBaseThread.h  TimeoutManager.h
coral/io/test/: CMakeLists.txt  FsUtilTest.cpp  IOBufCursorTest.cpp  IOBufQueueTest.cpp  IOBufTest.cpp
coral/platform/: CMakeLists.txt
coral/platform/mac/: CFTypeWrapper.h
coral/test/: ApplyTupleTest.cpp  AsciiCaseInsensitiveBenchmark.cpp  AsciiCaseInsensitiveTest.cpp  BenchmarkTest.cpp  CMakeLists.txt  ConvTest.cpp  CpuIdTest.cpp  DemangleTest.cpp  DeterministicSchedule.cpp  DeterministicSchedule.h  DeterministicScheduleTest.cpp  DynamicConverterTest.cpp  DynamicOtherTest.cpp  DynamicTest.cpp  ExceptionTest.cpp  ExceptionWrapperBenchmark.cpp  ExceptionWrapperTest.cpp  FBStringBenchmark.cpp  FBStringTest.cpp  FBStringTestBenchmarks.cpp.h  FBVectorBenchmark.cpp  FBVectorTest.cpp  FBVectorTestBenchmarks.cpp.h  FileTest.cpp  FileTestLockHelper.cpp  FileUtilTest.cpp  ForeachTest.cpp  FormatBenchmark.cpp  FormatOtherTest.cpp  FormatTest.cpp  HashTest.cpp  IndexedMemPoolTest.cpp  JsonOtherTest.cpp  JsonTest.cpp  LifoSemTests.cpp  MPMCQueueTest.cpp  MapUtilTest.cpp  MemoryTest.cpp  MoveWrapperTest.cpp  OptionalTest.cpp  (+18 more)
coral/test/json_test_data/: json_test_data
coral/test/stl_tests/: StlVectorTest.cpp
folly/: CMakeLists.txt  dynamic-inl.h  dynamic.cpp  dynamic.h  folly-config.h.in
folly/detail/: Clock.cpp
folly/experimental/: CMakeLists.txt
folly/experimental/exception_tracer/: CMakeLists.txt
folly/experimental/fibers/: CMakeLists.txt
folly/experimental/io/: CMakeLists.txt
folly/experimental/symbolizer/: CMakeLists.txt
folly/experimental/test/: CMakeLists.txt
folly/ext/: Binascii-inl.h  Binascii.cpp  Binascii.h  CMakeLists.txt  Enum.h  FixedStream.h  Logging.cpp  Logging.h  MapUtil.h  NumericRange.h  Regex.cpp  Regex.h  String-inl.h  String.cpp  String.h  StringBase.cpp  Time.cpp  Time.h  TypeDef.cpp  TypeDef.h  Unicode.cpp  Unicode.h  Utf8StringPiece.cpp  Utf8StringPiece.h
folly/ext/io/: CMakeLists.txt  FsUtil-inl.h  FsUtil.cpp  FsUtil.h
folly/ext/platform/: CMakeLists.txt
folly/futures/: CMakeLists.txt
folly/futures/test/: CMakeLists.txt
folly/io/: CMakeLists.txt
folly/io/async/: CMakeLists.txt
folly/io/test/: CMakeLists.txt
folly/stats/: CMakeLists.txt
folly/test/: CMakeLists.txt
(+39 files in other folders)
